<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp"
        android:background="#DFDFDF"
        android:ems="10"
        android:gravity="right"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:gravity="center_horizontal" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/boton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton1" />

                <Button
                    android:id="@+id/boton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton2" />

                <Button
                    android:id="@+id/boton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/boton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton4" />

                <Button
                    android:id="@+id/boton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton5" />

                <Button
                    android:id="@+id/boton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton6" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/boton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton7" />

                <Button
                    android:id="@+id/boton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton8" />

                <Button
                    android:id="@+id/boton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton9" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/boton0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:layout_span="3"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/boton0" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/botonDividir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/botonDividir" />

                <Button
                    android:id="@+id/botonMultiplicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/botonMultiplicar" />

                <Button
                    android:id="@+id/botonRestar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"
                    android:background="@drawable/estilos_botones"
                    android:text="@string/botonRestar" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="246dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/botonIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilos_botones"
                android:text="@string/botonIgual" />

            <Button
                android:id="@+id/botonSumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                android:background="@drawable/estilos_botones"
                android:text="@string/botonSumar" />

            <Button
                android:id="@+id/botonBorrar"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilos_botones"
                android:text="@string/botonBorrar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>